# grpc-modbus

./: .gitignore  Dockerfile  README.md  client.py  client_test.py  common.proto  common_pb2.py  common_pb2_grpc.py  device.proto  device_pb2.py  device_pb2.pyi  device_pb2_grpc.py  modbus.py  modbus_parser.py  pyproject.toml  server.py  server_test.py
src/: client.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  server.py
tests/: test_parser.py  test_read_write.py  test_server.py
